RESOLVED FIXED281157
REGRESSION (284573@main): [ macOS wk1 ] imported/w3c/web-platform-tests/css/css-cascade/all-prop-revert-layer.html is a consistent failure
https://bugs.webkit.org/show_bug.cgi?id=281157
Summary REGRESSION (284573@main): [ macOS wk1 ] imported/w3c/web-platform-tests/css/c...
Karl Rackler
Reported 2024-10-09 12:00:43 PDT
Description: imported/w3c/web-platform-tests/css/css-cascade/all-prop-revert-layer.html This test was modified at 284573@main in the [WPT] Sync CSS/css-cascade, which probably introduced the constant failure. History: https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fcss%2Fcss-cascade%2Fall-prop-revert-layer.html&flavor=wk1 Diff: PASS rotate PASS row-gap PASS ruby-align +FAIL ruby-position assert_not_equals: Should get a different computed value. got disallowed value "over" PASS rx PASS ry PASS scale
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-09 12:01:32 PDT
EWS
Comment 2 2024-10-09 12:14:35 PDT
Test gardening commit 284911@main (f95611421574): <https://commits.webkit.org/284911@main> Reviewed commits have been landed. Closing PR #34920 and removing active labels.
Sam Sneddon [:gsnedders]
Comment 3 2024-10-09 14:55:06 PDT
Practically will be a regression from https://commits.webkit.org/281804@main, where ruby-position got unprefixed.
Sam Sneddon [:gsnedders]
Comment 4 2024-10-09 17:49:34 PDT
Bug 281165 is (unfortunately) a new bug with the PR to fix this, though it feels a bit pre-emptive to close this as a dupe when this is where all the prior discussion is.
EWS
Comment 5 2024-10-09 19:03:06 PDT
Test gardening commit 283286.235@safari-7620-branch (af4eb75e0da0): <https://commits.webkit.org/283286.235@safari-7620-branch> Reviewed commits have been landed. Closing PR #1997 and removing active labels.
Antti Koivisto
Comment 6 2024-10-11 03:46:03 PDT
EWS
Comment 7 2024-10-11 07:08:07 PDT
Committed 285015@main (dab4f5183e76): <https://commits.webkit.org/285015@main> Reviewed commits have been landed. Closing PR #35033 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.