REGRESSION (284573@main): [ macOS wk1 ] imported/w3c/web-platform-tests/css/css-cascade/all-prop-revert-layer.html is a consistent failure https://bugs.webkit.org/show_bug.cgi?id=281157 rdar://137614049

Reviewed by Alan Baradlay.

* LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/all-prop-revert-layer-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-ruby/ruby-position.html:

Revert a test importer fixup to use -webkit-ruby-position instead of ruby-position.

* Source/WebCore/css/CSSProperties.json:

Mark -webkit-ruby-position as a cascade-alias for ruby-position. This ensures it doesn't show up
in computed style enumeration.

* Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::consumeWebKitRubyPosition):

Also limit parser-allowed values of -webkit-ruby-position.

Canonical link: https://commits.webkit.org/285015@main